Hide Comscore pixel, correctly size banner placeholders on mobile

--- a/root/src/css/seattletimes.less
+++ b/root/src/css/seattletimes.less
@@ -201,6 +201,10 @@ nav.main-nav {
       max-width: 728px;
       &::before {
         padding-bottom: percentage(90 / 728);
+
+        @media @mobile {
+          padding-bottom: percentage(50 / 300);
+        }
       }
     }
 
